# geo-matcher

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  app.py  docker-compose-eubucco.com.yml  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  results.csv
data/: sample_data.parquet  tutorial-candidate.parquet
eubucco_conflator/: app.py  candidate_pairs.py  cli.py  dataset.py  labeling_dataset.py  map.py  run.py  spatial.py  state.py  wsgi.py
eubucco_conflator/templates/: index.html  show_candidate.html  show_candidate_pair.html  show_neighborhood.html
geo_matcher/: app.py  candidate_pairs.py  cli.py  dataset.py  map.py  state.py  state_handler.py  wsgi.py
geo_matcher/data/: tutorial-candidate.parquet  tutorial-neighborhood.pickle
geo_matcher/static/css/: common.css
geo_matcher/static/js/: map_custom.js
geo_matcher/templates/: base.html  base_index.html  base_labeling.html  index.html  neighborhood_index.html  show_candidate_pair.html  show_neighborhood.html  success.html
templates/: index.html  show_candidate.html
