[tool.poetry]
name = "eubucco-conflator"
version = "0.1.0"
description = "Tool to detect and label duplicates when conflating multiple building footprint datasets."
authors = ["Florian Nachtigall <nachtigall.florian@gmail.com>"]
readme = "README.md"
packages = [{include = "eubucco_conflator"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1"
folium = "^0.19"
geopandas = "^1.0"
pandas = "^2.2"
pyarrow = "^19.0"
click = "^8.1"
waitress = "^3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
conflate = "eubucco_conflator.app:main"