[tool.poetry]
name = "geo-matcher"
version = "0.1.0"
description = "Tool for matching and labeling building pairs across building footprint datasets."
authors = ["Florian Nachtigall <nachtigall.florian@gmail.com>"]
readme = "README.md"
packages = [{include = "geo_matcher"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1"
flask-executor = "^1.0"
folium = "^0.19"
geopandas = "^1.0"
pandas = "^2.2"
pyarrow = "^19.0"
click = "^8.1"
waitress = "^3.0"
h3 = "^4.2.2"
momepy = "^0.9.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gmatch = "geo_matcher.cli:cli"
